Fixed text align of expression to end and added padding

--- a/style.css
+++ b/style.css
@@ -27,6 +27,9 @@ main {
     height: 40px;
     background-color: aqua;
     margin: 0 10px;
+    font-size: 20px;
+    text-align: end;
+    padding: 10px;
 }
 
 .operands-container {
